Include the full documentation (https://github.com/opensemanticsearch/open-semantic-search/issues/392)

--- a/etc/solr-php-ui/apache.conf
+++ b/etc/solr-php-ui/apache.conf
@@ -1,5 +1,12 @@
 # Solr PHP Client UI default Apache configuration
 
+Alias /search/docs /usr/share/doc/open-semantic-search/site
+
+<Directory /usr/share/doc/open-semantic-search/site>
+	DirectoryIndex index.html
+</Directory>
+
+
 Alias /search /usr/share/solr-php-ui
 
 <Directory /usr/share/solr-php-ui>
